#Fase-1-configuracao-swagger : Correção de DTO para mapeamento de response paginados e definição de bean Swagger